[gd_scene load_steps=15 format=3 uid="uid://bdd130r3cnp88"]

[ext_resource type="Script" path="res://scenes/enemies/simple_enemy.gd" id="1_h22hu"]
[ext_resource type="Texture2D" uid="uid://b2ewnmaaqi1gy" path="res://sprites/SimpleShip.png" id="2_6f36q"]
[ext_resource type="PackedScene" uid="uid://4tpapswc0bbh" path="res://shield.tscn" id="3_qwefe"]
[ext_resource type="Script" path="res://scenes/state_machine/finite_state_machine.gd" id="3_wtaja"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_wander_state.gd" id="4_db3q0"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_chase_state.gd" id="5_ahrbe"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_aware_state.gd" id="6_w7qao"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_attack_state.gd" id="7_e3itp"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_death_state.gd" id="8_grrgi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_10cgx"]
radius = 20.0
height = 68.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ow8ix"]
radius = 2500.0

[sub_resource type="CircleShape2D" id="CircleShape2D_21b31"]
radius = 2000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_celd3"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vu1h3"]
radius = 1000.0

[node name="Simple_Enemy" type="CharacterBody2D" node_paths=PackedStringArray("muzzle") groups=["enemy"]]
collision_layer = 32
collision_mask = 6
script = ExtResource("1_h22hu")
muzzle = NodePath("Marker2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.987329, 0.102765, 0, 1)
scale = Vector2(2, 2)
texture = ExtResource("2_6f36q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
shape = SubResource("CapsuleShape2D_10cgx")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -20)

[node name="Shield" parent="." groups=["enemy shield"] instance=ExtResource("3_qwefe")]
scale = Vector2(6, 6)
collision_layer = 128
collision_mask = 4

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Aware_Detection_Area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aware_Detection_Area"]
shape = SubResource("CircleShape2D_ow8ix")

[node name="Chase_Detection_Area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chase_Detection_Area"]
shape = SubResource("CircleShape2D_21b31")

[node name="Retreat_Detection_Area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Retreat_Detection_Area"]
visible = false
shape = SubResource("CircleShape2D_celd3")
debug_color = Color(0.810603, 0.683102, 0.104256, 0.42)

[node name="Attack_Detection_Area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Detection_Area"]
shape = SubResource("CircleShape2D_vu1h3")
debug_color = Color(0.847059, 0.215686, 0.45098, 0.419608)

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_wtaja")
state = NodePath("EnemyWanderState")

[node name="EnemyWanderState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "wander_timer")]
script = ExtResource("4_db3q0")
wander_range = 250.0
speed = null
actor = NodePath("../..")
wander_timer = NodePath("WanderTimer")

[node name="WanderTimer" type="Timer" parent="FiniteStateMachine/EnemyWanderState"]
wait_time = 3.0
one_shot = true

[node name="EnemyAwareState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("6_w7qao")
actor = NodePath("../..")

[node name="EnemyChaseState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_ahrbe")
actor = NodePath("../..")

[node name="EnemyAttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("7_e3itp")
actor = NodePath("../..")

[node name="EnemyDeathState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_grrgi")

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
[connection signal="body_entered" from="Aware_Detection_Area" to="." method="_on_aware_detection_area_body_entered"]
[connection signal="body_exited" from="Aware_Detection_Area" to="." method="_on_aware_detection_area_body_exited"]
[connection signal="body_entered" from="Chase_Detection_Area" to="." method="_on_chase_detection_area_body_entered"]
[connection signal="body_exited" from="Chase_Detection_Area" to="." method="_on_chase_detection_area_body_exited"]
[connection signal="body_entered" from="Retreat_Detection_Area" to="." method="_on_retreat_detection_area_body_entered"]
[connection signal="body_exited" from="Retreat_Detection_Area" to="." method="_on_retreat_detection_area_body_exited"]
[connection signal="body_entered" from="Attack_Detection_Area" to="." method="_on_attack_detection_area_body_entered"]
[connection signal="body_exited" from="Attack_Detection_Area" to="." method="_on_attack_detection_area_body_exited"]
[connection signal="timeout" from="FiniteStateMachine/EnemyWanderState/WanderTimer" to="FiniteStateMachine/EnemyWanderState" method="_on_wander_timer_timeout"]
